NewArchive/fb478bf10d0ed3af34255bf339e2179d-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:14:9: error: a function-definition is not allowed here before '{' token
         {
         ^
